Correction for sponsor spacing

--- a/source/assets/stylesheets/_components.sponsors.scss
+++ b/source/assets/stylesheets/_components.sponsors.scss
@@ -7,7 +7,7 @@
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     text-align: center;
     align-items: center;
 
@@ -195,7 +195,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-basis: 100%;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     align-content: center;
     padding-bottom: $unit-l;
